# physical-ai

./: PHYSICAL_AI_GUIDE.md  README.md  pyproject.toml
PRP/: physical-ai-hello-world.md
examples/: 01_hello_mujoco.py  02_fetch_robot.py  03_train_pusht.py  04_eval_pretrained.py  05_smolvla_inference.py
week1/: README.md  assignment.py  day3_kinematics.py  day4_pid_control.py
